2007-01-21  Paul J Stevens <paul@nfg.nl>

	* debian/po/cs.po, debian/po/de.po, debian/po/es.po, debian/po/fr.po, 
	  debian/po/it.po, debian/po/ja.po, debian/po/nl.po, 
	  debian/po/pt_BR.po, debian/po/templates.pot:
	updating PO files
	* db.c, db.h:
	adding db_replycache_unregister
	* Makefile.in, config.in, configure, man/Makefile.in, modules/Makefile.in:
	updating autoconf files

2007-01-20  Aaron Stone  <aaron@serendipity.cx>

	* serverparent.c:
	Unrecognized options cause the daemons to bail out with an error.
	* Makefile.am, modules/Makefile.am:
	Accepted patch to use pkglib_LTLIBRARIES rather than hardcoding the
	lib paths (closes bug #492).

2007-01-20  Paul J Stevens <paul@nfg.nl>

	* debian/control, debian/dbmail-dev.install, debian/dbmail-ldap.config, 
	  debian/dbmail-ldap.docs, debian/dbmail-ldap.examples, 
	  debian/dbmail-ldap.install, debian/dbmail-ldap.postinst, 
	  debian/dbmail-ldap.templates, debian/dbmail-mysql.config, 
	  debian/dbmail-mysql.postinst, debian/dbmail-mysql.templates, 
	  debian/dbmail-pgsql.config, debian/dbmail-pgsql.postinst, 
	  debian/dbmail-pgsql.templates, debian/dbmail-sieve.dirs, 
	  debian/dbmail-sieve.docs, debian/dbmail-sieve.install, 
	  debian/dbmail-sieve.lintian-override, debian/dbmail-sieve.manpages, 
	  debian/dbmail-sieve.postinst, debian/dbmail-sqlite.config, 
	  debian/dbmail-sqlite.examples, debian/dbmail-sqlite.install, 
	  debian/dbmail-sqlite.postinst, debian/dbmail-sqlite.templates, 
	  debian/dbmail.config, debian/dbmail.docs, debian/dbmail.examples, 
	  debian/dbmail.init, debian/dbmail.install, debian/dbmail.manpages, 
	  debian/dbmail.postinst, debian/dbmail.templates, 
	  debian/po/POTFILES.in, debian/po/cs.po, debian/po/de.po, 
	  debian/po/es.po, debian/po/fr.po, debian/po/it.po, debian/po/ja.po, 
	  debian/po/nl.po, debian/po/pt_BR.po, debian/po/templates.pot, 
	  debian/rules:
	debian package reorganized

2007-01-17  Aaron Stone  <aaron@serendipity.cx>

	* pop3.c: