@@ -98,6 +98,8 @@ AC_SUBST(SQLITEINC)
 AC_SUBST(LDAPLIB)
 AC_SUBST(LDAPINC)
 
+AC_SUBST(SOCKETLIB)
+
 AC_SUBST(DM_LOGDIR)
 AC_SUBST(DM_CONFDIR)
 AC_SUBST(DM_STATEDIR)
