@@ -1,3 +1,8 @@
+2007-01-20  Aaron Stone  <aaron@serendipity.cx>
+
+	* acinclude.m4, configure.in, Makefile.am:
+	Wire up the SOCKETLIB variable into the link stage (closes bug #489).
+
 2007-01-21  Paul J Stevens <paul@nfg.nl>
 
 	* debian/po/cs.po, debian/po/de.po, debian/po/es.po, debian/po/fr.po, 
@@ -58,7 +63,7 @@
 	* user.c, maintenance.c:
 	Bail out when given invalid command line args (closes bug #448).
 	* configure.in, acinclude.m4:
-	Added a test for socket libraries (closes bug #489).
+	Added a test for socket libraries (see bug #489).
 
 2007-01-10  Paul J Stevens <paul@nfg.nl>
 
